force-app/main/default/objects/Social_Media__c/Social_Media__c.object-meta.xml
<CustomObject>
    <label>Social Media</label>
    <nameField>
        <displayFormat>SM-{000}</displayFormat>
        <label>Social Media Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Social Media</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>