force-app/main/default/objects/Social_Media__c/fields/Icon_URL__c.field-meta.xml
<CustomField>
    <fullName>Icon_URL__c</fullName>
    <label>Icon URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>