force-app/main/default/objects/Social_Media__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
            <value>
                <fullName>GitHub</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Trailhead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>